# DEPRECATED_hvacplugin

./: CMakeLists.txt  README.md  README.old  hvacplugin.cpp  hvacplugin.h
